optional/null refactoring